finish crud product

--- a/src/main/webapp/WEB-INF/templates/listing.html
+++ b/src/main/webapp/WEB-INF/templates/listing.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>Products Listing</h3>
-<a th:href="@{/products/add}">ADD NEW PRODUCT</a>
+<a th:href="@{/products/showAddForm}">ADD NEW PRODUCT</a>
 <div class="notify">
     <div th:if="${success}">
         <span th:text="${success}"></span>
