--- a/src/main/webapp/WEB-INF/templates/addProduct.html
+++ b/src/main/webapp/WEB-INF/templates/addProduct.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="/layout :: header">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <h3>Add Product</h3>
+<form action="#" th:action="@{/products/add}" th:object="${product}" method="post">
+    <input type="hidden" th:field="*{id}"><br>
+    <label>Name</label><input type="text" th:field="*{name}"><br>
+    <label>Price</label><input type="text" th:field="*{price}"><br>
+    <label>InStock</label><input type="text" th:field="*{inStock}"/><br>
+    <input type="submit" value="Submit"/>
+</form>
+<footer th:replace="/layout :: footer">
+
+</footer>
 </body>
 </html>
