--- a/src/main/webapp/WEB-INF/templates/detail.html
+++ b/src/main/webapp/WEB-INF/templates/detail.html
@@ -20,7 +20,7 @@
         <td th:text="${row.getName()}"></td>
         <td th:text="${row.getPrice()}"></td>
         <td th:text="${row.isInStock()}"></td>
-        <td><a th:href="@{/}">BACK TO LISTING</a></td>
+        <td><a th:href="@{/listing}">BACK TO LISTING</a></td>
     </tr>
     </tbody>
 </table>
